--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 }
 
 .task{
-    padding: 5px 20px 5px 10px;
+    padding: 5px 20px 5px 7px;
     box-shadow: 2px 2px 4px rgba(94, 122, 136, 0.568);
     margin: 5px;
     border-radius: 7px;
@@ -115,20 +115,22 @@ body{
 }
 
 .priority{
-    width: 30px;
+    width: 20%;
     height: 25px;
     border-radius: 5px;
     border: 1px solid rgba(75, 75, 75);
     transition: 0.4s;
     font-weight: 600;
+    margin-right: 8px;
+    text-align: center;
 }
 
 .priority:focus{
-    width: 40px;
+    transform: scale(1.2);
     outline: none !important;
     box-shadow: 1px 1px 2px rgba(75, 75, 75, 0.822);
 }
 
 .priority:hover{
-    width: 40px;
+    transform: scale(1.2);
 }
